Sheet6/parser.output
Terminals unused in grammar

   Token_error
   Token_repeat
   Token_until


State 97 conflicts: 1 shift/reduce


Grammar

    0 $accept: start $end

    1 start: Token_program Token_identifier Token_semicolon varDec compStmt Token_dot

    2 varDec: Token_var varDecList
    3       | %empty

    4 varDecList: varDecList identListType Token_semicolon
    5           | identListType Token_semicolon

    6 identListType: identList Token_colon type

    7 identList: identList Token_comma Token_identifier
    8          | Token_identifier

    9 type: simpleType
   10     | Token_array Token_lRectBracket Token_Integer Token_dot Token_dot Token_Integer Token_rRectBracket Token_of simpleType

   11 simpleType: Token_integer
   12           | Token_real
   13           | Token_string

   14 compStmt: Token_begin stmtList Token_end

   15 stmtList: stmtList Token_semicolon statement
   16         | statement

   17 statement: assignStmt
   18          | compStmt
   19          | ifStmt
   20          | whileStmt
   21          | forStmt
   22          | Token_read Token_lBracket exprList Token_rBracket
   23          | Token_write Token_lBracket exprList Token_rBracket

   24 assignStmt: Token_identifier index Token_assign expr

   25 index: Token_lRectBracket expr Token_rRectBracket

   26 ifStmt: Token_if expr Token_then statement elsePart

   27 elsePart: Token_else statement
   28         | %empty

   29 whileStmt: Token_while expr Token_do statement

   30 forStmt: Token_for Token_identifier Token_assign expr toPart expr Token_do statement

   31 toPart: Token_to
   32       | Token_downTo

   33 exprList: exprList Token_comma expr
   34         | expr

   35 expr: simpleExpr relOp simpleExpr
   36     | simpleExpr

   37 simpleExpr: simpleExpr addOp term
   38           | term

   39 term: term mulOp factor
   40     | factor

   41 factor: Token_Integer
   42       | Token_Real
   43       | Token_String
   44       | Token_false
   45       | Token_true
   46       | Token_identifier index
   47       | Token_not factor
   48       | Token_sub factor
   49       | Token_lBracket expr Token_rBracket

   50 relOp: Token_less
   51      | Token_leq
   52      | Token_bigger
   53      | Token_beq
   54      | Token_eq
   55      | Token_noteq

   56 addOp: Token_add
   57      | Token_sub
   58      | Token_or

   59 mulOp: Token_mult
   60      | Token_divide
   61      | Token_div
   62      | Token_mod
   63      | Token_and


Terminals, with rules where they appear

$end (0) 0
error (256)
Token_add (258) 56
Token_and (259) 63
Token_array (260) 10
Token_assign (261) 24 30
Token_begin (262) 14
Token_beq (263) 53
Token_bigger (264) 52
Token_colon (265) 6
Token_comma (266) 7 33
Token_div (267) 61
Token_divide (268) 60
Token_do (269) 29 30
Token_dot (270) 1 10
Token_downTo (271) 32
Token_else (272) 27
Token_end (273) 14
Token_eq (274) 54
Token_error (275)
Token_false (276) 44
Token_for (277) 30
Token_identifier (278) 1 7 8 24 30 46
Token_if (279) 26
Token_Integer (280) 10 41
Token_integer (281) 11
Token_lBracket (282) 22 23 49
Token_leq (283) 51
Token_less (284) 50
Token_lRectBracket (285) 10 25
Token_mod (286) 62
Token_mult (287) 59
Token_not (288) 47
Token_noteq (289) 55
Token_of (290) 10
Token_or (291) 58
Token_program (292) 1
Token_rBracket (293) 22 23 49
Token_read (294) 22
Token_Real (295) 42
Token_real (296) 12
Token_repeat (297)
Token_rRectBracket (298) 10 25
Token_semicolon (299) 1 4 5 15
Token_String (300) 43
Token_string (301) 13
Token_sub (302) 48 57
Token_then (303) 26
Token_to (304) 31
Token_true (305) 45
Token_until (306)
Token_var (307) 2
Token_while (308) 29
Token_write (309) 23


Nonterminals, with rules where they appear

$accept (55)
    on left: 0
start (56)
    on left: 1, on right: 0
varDec (57)
    on left: 2 3, on right: 1
varDecList (58)
    on left: 4 5, on right: 2 4
identListType (59)
    on left: 6, on right: 4 5
identList (60)
    on left: 7 8, on right: 6 7
type (61)
    on left: 9 10, on right: 6
simpleType (62)
    on left: 11 12 13, on right: 9 10
compStmt (63)
    on left: 14, on right: 1 18
stmtList (64)
    on left: 15 16, on right: 14 15
statement (65)
    on left: 17 18 19 20 21 22 23, on right: 15 16 26 27 29 30
assignStmt (66)
    on left: 24, on right: 17
index (67)
    on left: 25, on right: 24 46
ifStmt (68)
    on left: 26, on right: 19
elsePart (69)
    on left: 27 28, on right: 26
whileStmt (70)
    on left: 29, on right: 20
forStmt (71)
    on left: 30, on right: 21
toPart (72)
    on left: 31 32, on right: 30
exprList (73)
    on left: 33 34, on right: 22 23 33
expr (74)
    on left: 35 36, on right: 24 25 26 29 30 33 34 49
simpleExpr (75)
    on left: 37 38, on right: 35 36 37
term (76)
    on left: 39 40, on right: 37 38 39
factor (77)
    on left: 41 42 43 44 45 46 47 48 49, on right: 39 40 47 48
relOp (78)
    on left: 50 51 52 53 54 55, on right: 35
addOp (79)
    on left: 56 57 58, on right: 37
mulOp (80)
    on left: 59 60 61 62 63, on right: 39


State 0

    0 $accept: . start $end

    Token_program  shift, and go to state 1

    start  go to state 2


State 1

    1 start: Token_program . Token_identifier Token_semicolon varDec compStmt Token_dot

    Token_identifier  shift, and go to state 3


State 2

    0 $accept: start . $end

    $end  shift, and go to state 4


State 3

    1 start: Token_program Token_identifier . Token_semicolon varDec compStmt Token_dot

    Token_semicolon  shift, and go to state 5


State 4

    0 $accept: start $end .

    $default  accept


State 5

    1 start: Token_program Token_identifier Token_semicolon . varDec compStmt Token_dot

    Token_var  shift, and go to state 6

    $default  reduce using rule 3 (varDec)

    varDec  go to state 7


State 6

    2 varDec: Token_var . varDecList

    Token_identifier  shift, and go to state 8

    varDecList     go to state 9
    identListType  go to state 10
    identList      go to state 11


State 7

    1 start: Token_program Token_identifier Token_semicolon varDec . compStmt Token_dot

    Token_begin  shift, and go to state 12

    compStmt  go to state 13


State 8

    8 identList: Token_identifier .

    $default  reduce using rule 8 (identList)


State 9

    2 varDec: Token_var varDecList .
    4 varDecList: varDecList . identListType Token_semicolon

    Token_identifier  shift, and go to state 8

    $default  reduce using rule 2 (varDec)

    identListType  go to state 14
    identList      go to state 11


State 10

    5 varDecList: identListType . Token_semicolon

    Token_semicolon  shift, and go to state 15


State 11

    6 identListType: identList . Token_colon type
    7 identList: identList . Token_comma Token_identifier

    Token_colon  shift, and go to state 16
    Token_comma  shift, and go to state 17


State 12

   14 compStmt: Token_begin . stmtList Token_end

    Token_begin       shift, and go to state 12
    Token_for         shift, and go to state 18
    Token_identifier  shift, and go to state 19
    Token_if          shift, and go to state 20
    Token_read        shift, and go to state 21
    Token_while       shift, and go to state 22
    Token_write       shift, and go to state 23

    compStmt    go to state 24
    stmtList    go to state 25
    statement   go to state 26
    assignStmt  go to state 27
    ifStmt      go to state 28
    whileStmt   go to state 29
    forStmt     go to state 30


State 13

    1 start: Token_program Token_identifier Token_semicolon varDec compStmt . Token_dot

    Token_dot  shift, and go to state 31


State 14

    4 varDecList: varDecList identListType . Token_semicolon

    Token_semicolon  shift, and go to state 32


State 15

    5 varDecList: identListType Token_semicolon .

    $default  reduce using rule 5 (varDecList)


State 16

    6 identListType: identList Token_colon . type

    Token_array    shift, and go to state 33
    Token_integer  shift, and go to state 34
    Token_real     shift, and go to state 35
    Token_string   shift, and go to state 36

    type        go to state 37
    simpleType  go to state 38


State 17

    7 identList: identList Token_comma . Token_identifier

    Token_identifier  shift, and go to state 39


State 18

   30 forStmt: Token_for . Token_identifier Token_assign expr toPart expr Token_do statement

    Token_identifier  shift, and go to state 40


State 19

   24 assignStmt: Token_identifier . index Token_assign expr

    Token_lRectBracket  shift, and go to state 41

    index  go to state 42


State 20

   26 ifStmt: Token_if . expr Token_then statement elsePart

    Token_false       shift, and go to state 43
    Token_identifier  shift, and go to state 44
    Token_Integer     shift, and go to state 45
    Token_lBracket    shift, and go to state 46
    Token_not         shift, and go to state 47
    Token_Real        shift, and go to state 48
    Token_String      shift, and go to state 49
    Token_sub         shift, and go to state 50
    Token_true        shift, and go to state 51

    expr        go to state 52
    simpleExpr  go to state 53
    term        go to state 54
    factor      go to state 55


State 21

   22 statement: Token_read . Token_lBracket exprList Token_rBracket

    Token_lBracket  shift, and go to state 56


State 22

   29 whileStmt: Token_while . expr Token_do statement

    Token_false       shift, and go to state 43
    Token_identifier  shift, and go to state 44
    Token_Integer     shift, and go to state 45
    Token_lBracket    shift, and go to state 46
    Token_not         shift, and go to state 47
    Token_Real        shift, and go to state 48
    Token_String      shift, and go to state 49
    Token_sub         shift, and go to state 50
    Token_true        shift, and go to state 51

    expr        go to state 57
    simpleExpr  go to state 53
    term        go to state 54
    factor      go to state 55


State 23

   23 statement: Token_write . Token_lBracket exprList Token_rBracket

    Token_lBracket  shift, and go to state 58


State 24

   18 statement: compStmt .

    $default  reduce using rule 18 (statement)


State 25

   14 compStmt: Token_begin stmtList . Token_end
   15 stmtList: stmtList . Token_semicolon statement

    Token_end        shift, and go to state 59
    Token_semicolon  shift, and go to state 60


State 26

   16 stmtList: statement .

    $default  reduce using rule 16 (stmtList)


State 27

   17 statement: assignStmt .

    $default  reduce using rule 17 (statement)


State 28

   19 statement: ifStmt .

    $default  reduce using rule 19 (statement)


State 29

   20 statement: whileStmt .

    $default  reduce using rule 20 (statement)


State 30

   21 statement: forStmt .

    $default  reduce using rule 21 (statement)


State 31

    1 start: Token_program Token_identifier Token_semicolon varDec compStmt Token_dot .

    $default  reduce using rule 1 (start)


State 32

    4 varDecList: varDecList identListType Token_semicolon .

    $default  reduce using rule 4 (varDecList)


State 33

   10 type: Token_array . Token_lRectBracket Token_Integer Token_dot Token_dot Token_Integer Token_rRectBracket Token_of simpleType

    Token_lRectBracket  shift, and go to state 61


State 34

   11 simpleType: Token_integer .

    $default  reduce using rule 11 (simpleType)


State 35

   12 simpleType: Token_real .

    $default  reduce using rule 12 (simpleType)


State 36

   13 simpleType: Token_string .

    $default  reduce using rule 13 (simpleType)


State 37

    6 identListType: identList Token_colon type .

    $default  reduce using rule 6 (identListType)


State 38

    9 type: simpleType .

    $default  reduce using rule 9 (type)


State 39

    7 identList: identList Token_comma Token_identifier .

    $default  reduce using rule 7 (identList)


State 40

   30 forStmt: Token_for Token_identifier . Token_assign expr toPart expr Token_do statement

    Token_assign  shift, and go to state 62


State 41

   25 index: Token_lRectBracket . expr Token_rRectBracket

    Token_false       shift, and go to state 43
    Token_identifier  shift, and go to state 44
    Token_Integer     shift, and go to state 45
    Token_lBracket    shift, and go to state 46
    Token_not         shift, and go to state 47
    Token_Real        shift, and go to state 48
    Token_String      shift, and go to state 49
    Token_sub         shift, and go to state 50
    Token_true        shift, and go to state 51

    expr        go to state 63
    simpleExpr  go to state 53
    term        go to state 54
    factor      go to state 55


State 42

   24 assignStmt: Token_identifier index . Token_assign expr

    Token_assign  shift, and go to state 64


State 43

   44 factor: Token_false .

    $default  reduce using rule 44 (factor)


State 44

   46 factor: Token_identifier . index

    Token_lRectBracket  shift, and go to state 41

    index  go to state 65


State 45

   41 factor: Token_Integer .

    $default  reduce using rule 41 (factor)


State 46

   49 factor: Token_lBracket . expr Token_rBracket

    Token_false       shift, and go to state 43
    Token_identifier  shift, and go to state 44
    Token_Integer     shift, and go to state 45
    Token_lBracket    shift, and go to state 46
    Token_not         shift, and go to state 47
    Token_Real        shift, and go to state 48
    Token_String      shift, and go to state 49
    Token_sub         shift, and go to state 50
    Token_true        shift, and go to state 51

    expr        go to state 66
    simpleExpr  go to state 53
    term        go to state 54
    factor      go to state 55


State 47

   47 factor: Token_not . factor

    Token_false       shift, and go to state 43
    Token_identifier  shift, and go to state 44
    Token_Integer     shift, and go to state 45
    Token_lBracket    shift, and go to state 46
    Token_not         shift, and go to state 47
    Token_Real        shift, and go to state 48
    Token_String      shift, and go to state 49
    Token_sub         shift, and go to state 50
    Token_true        shift, and go to state 51

    factor  go to state 67


State 48

   42 factor: Token_Real .

    $default  reduce using rule 42 (factor)


State 49

   43 factor: Token_String .

    $default  reduce using rule 43 (factor)


State 50

   48 factor: Token_sub . factor

    Token_false       shift, and go to state 43
    Token_identifier  shift, and go to state 44
    Token_Integer     shift, and go to state 45
    Token_lBracket    shift, and go to state 46
    Token_not         shift, and go to state 47
    Token_Real        shift, and go to state 48
    Token_String      shift, and go to state 49
    Token_sub         shift, and go to state 50
    Token_true        shift, and go to state 51

    factor  go to state 68


State 51

   45 factor: Token_true .

    $default  reduce using rule 45 (factor)


State 52

   26 ifStmt: Token_if expr . Token_then statement elsePart

    Token_then  shift, and go to state 69


State 53

   35 expr: simpleExpr . relOp simpleExpr
   36     | simpleExpr .
   37 simpleExpr: simpleExpr . addOp term

    Token_add     shift, and go to state 70
    Token_beq     shift, and go to state 71
    Token_bigger  shift, and go to state 72
    Token_eq      shift, and go to state 73
    Token_leq     shift, and go to state 74
    Token_less    shift, and go to state 75
    Token_noteq   shift, and go to state 76
    Token_or      shift, and go to state 77
    Token_sub     shift, and go to state 78

    $default  reduce using rule 36 (expr)

    relOp  go to state 79
    addOp  go to state 80


State 54

   38 simpleExpr: term .
   39 term: term . mulOp factor

    Token_and     shift, and go to state 81
    Token_div     shift, and go to state 82
    Token_divide  shift, and go to state 83
    Token_mod     shift, and go to state 84
    Token_mult    shift, and go to state 85

    $default  reduce using rule 38 (simpleExpr)

    mulOp  go to state 86


State 55

   40 term: factor .

    $default  reduce using rule 40 (term)


State 56

   22 statement: Token_read Token_lBracket . exprList Token_rBracket

    Token_false       shift, and go to state 43
    Token_identifier  shift, and go to state 44
    Token_Integer     shift, and go to state 45
    Token_lBracket    shift, and go to state 46
    Token_not         shift, and go to state 47
    Token_Real        shift, and go to state 48
    Token_String      shift, and go to state 49
    Token_sub         shift, and go to state 50
    Token_true        shift, and go to state 51

    exprList    go to state 87
    expr        go to state 88
    simpleExpr  go to state 53
    term        go to state 54
    factor      go to state 55


State 57

   29 whileStmt: Token_while expr . Token_do statement

    Token_do  shift, and go to state 89


State 58

   23 statement: Token_write Token_lBracket . exprList Token_rBracket

    Token_false       shift, and go to state 43
    Token_identifier  shift, and go to state 44
    Token_Integer     shift, and go to state 45
    Token_lBracket    shift, and go to state 46
    Token_not         shift, and go to state 47
    Token_Real        shift, and go to state 48
    Token_String      shift, and go to state 49
    Token_sub         shift, and go to state 50
    Token_true        shift, and go to state 51

    exprList    go to state 90
    expr        go to state 88
    simpleExpr  go to state 53
    term        go to state 54
    factor      go to state 55


State 59

   14 compStmt: Token_begin stmtList Token_end .

    $default  reduce using rule 14 (compStmt)


State 60

   15 stmtList: stmtList Token_semicolon . statement

    Token_begin       shift, and go to state 12
    Token_for         shift, and go to state 18
    Token_identifier  shift, and go to state 19
    Token_if          shift, and go to state 20
    Token_read        shift, and go to state 21
    Token_while       shift, and go to state 22
    Token_write       shift, and go to state 23

    compStmt    go to state 24
    statement   go to state 91
    assignStmt  go to state 27
    ifStmt      go to state 28
    whileStmt   go to state 29
    forStmt     go to state 30


State 61

   10 type: Token_array Token_lRectBracket . Token_Integer Token_dot Token_dot Token_Integer Token_rRectBracket Token_of simpleType

    Token_Integer  shift, and go to state 92


State 62

   30 forStmt: Token_for Token_identifier Token_assign . expr toPart expr Token_do statement

    Token_false       shift, and go to state 43
    Token_identifier  shift, and go to state 44
    Token_Integer     shift, and go to state 45
    Token_lBracket    shift, and go to state 46
    Token_not         shift, and go to state 47
    Token_Real        shift, and go to state 48
    Token_String      shift, and go to state 49
    Token_sub         shift, and go to state 50
    Token_true        shift, and go to state 51

    expr        go to state 93
    simpleExpr  go to state 53
    term        go to state 54
    factor      go to state 55


State 63

   25 index: Token_lRectBracket expr . Token_rRectBracket

    Token_rRectBracket  shift, and go to state 94


State 64

   24 assignStmt: Token_identifier index Token_assign . expr

    Token_false       shift, and go to state 43
    Token_identifier  shift, and go to state 44
    Token_Integer     shift, and go to state 45
    Token_lBracket    shift, and go to state 46
    Token_not         shift, and go to state 47
    Token_Real        shift, and go to state 48
    Token_String      shift, and go to state 49
    Token_sub         shift, and go to state 50
    Token_true        shift, and go to state 51

    expr        go to state 95
    simpleExpr  go to state 53
    term        go to state 54
    factor      go to state 55


State 65

   46 factor: Token_identifier index .

    $default  reduce using rule 46 (factor)


State 66

   49 factor: Token_lBracket expr . Token_rBracket

    Token_rBracket  shift, and go to state 96


State 67

   47 factor: Token_not factor .

    $default  reduce using rule 47 (factor)


State 68

   48 factor: Token_sub factor .

    $default  reduce using rule 48 (factor)


State 69

   26 ifStmt: Token_if expr Token_then . statement elsePart

    Token_begin       shift, and go to state 12
    Token_for         shift, and go to state 18
    Token_identifier  shift, and go to state 19
    Token_if          shift, and go to state 20
    Token_read        shift, and go to state 21
    Token_while       shift, and go to state 22
    Token_write       shift, and go to state 23

    compStmt    go to state 24
    statement   go to state 97
    assignStmt  go to state 27
    ifStmt      go to state 28
    whileStmt   go to state 29
    forStmt     go to state 30


State 70

   56 addOp: Token_add .

    $default  reduce using rule 56 (addOp)


State 71

   53 relOp: Token_beq .

    $default  reduce using rule 53 (relOp)


State 72

   52 relOp: Token_bigger .

    $default  reduce using rule 52 (relOp)


State 73

   54 relOp: Token_eq .

    $default  reduce using rule 54 (relOp)


State 74

   51 relOp: Token_leq .

    $default  reduce using rule 51 (relOp)


State 75

   50 relOp: Token_less .

    $default  reduce using rule 50 (relOp)


State 76

   55 relOp: Token_noteq .

    $default  reduce using rule 55 (relOp)


State 77

   58 addOp: Token_or .

    $default  reduce using rule 58 (addOp)


State 78

   57 addOp: Token_sub .

    $default  reduce using rule 57 (addOp)


State 79

   35 expr: simpleExpr relOp . simpleExpr

    Token_false       shift, and go to state 43
    Token_identifier  shift, and go to state 44
    Token_Integer     shift, and go to state 45
    Token_lBracket    shift, and go to state 46
    Token_not         shift, and go to state 47
    Token_Real        shift, and go to state 48
    Token_String      shift, and go to state 49
    Token_sub         shift, and go to state 50
    Token_true        shift, and go to state 51

    simpleExpr  go to state 98
    term        go to state 54
    factor      go to state 55


State 80

   37 simpleExpr: simpleExpr addOp . term

    Token_false       shift, and go to state 43
    Token_identifier  shift, and go to state 44
    Token_Integer     shift, and go to state 45
    Token_lBracket    shift, and go to state 46
    Token_not         shift, and go to state 47
    Token_Real        shift, and go to state 48
    Token_String      shift, and go to state 49
    Token_sub         shift, and go to state 50
    Token_true        shift, and go to state 51

    term    go to state 99
    factor  go to state 55


State 81

   63 mulOp: Token_and .

    $default  reduce using rule 63 (mulOp)


State 82

   61 mulOp: Token_div .

    $default  reduce using rule 61 (mulOp)


State 83

   60 mulOp: Token_divide .

    $default  reduce using rule 60 (mulOp)


State 84

   62 mulOp: Token_mod .

    $default  reduce using rule 62 (mulOp)


State 85

   59 mulOp: Token_mult .

    $default  reduce using rule 59 (mulOp)


State 86

   39 term: term mulOp . factor

    Token_false       shift, and go to state 43
    Token_identifier  shift, and go to state 44
    Token_Integer     shift, and go to state 45
    Token_lBracket    shift, and go to state 46
    Token_not         shift, and go to state 47
    Token_Real        shift, and go to state 48
    Token_String      shift, and go to state 49
    Token_sub         shift, and go to state 50
    Token_true        shift, and go to state 51

    factor  go to state 100


State 87

   22 statement: Token_read Token_lBracket exprList . Token_rBracket
   33 exprList: exprList . Token_comma expr

    Token_comma     shift, and go to state 101
    Token_rBracket  shift, and go to state 102


State 88

   34 exprList: expr .

    $default  reduce using rule 34 (exprList)


State 89

   29 whileStmt: Token_while expr Token_do . statement

    Token_begin       shift, and go to state 12
    Token_for         shift, and go to state 18
    Token_identifier  shift, and go to state 19
    Token_if          shift, and go to state 20
    Token_read        shift, and go to state 21
    Token_while       shift, and go to state 22
    Token_write       shift, and go to state 23

    compStmt    go to state 24
    statement   go to state 103
    assignStmt  go to state 27
    ifStmt      go to state 28
    whileStmt   go to state 29
    forStmt     go to state 30


State 90

   23 statement: Token_write Token_lBracket exprList . Token_rBracket
   33 exprList: exprList . Token_comma expr

    Token_comma     shift, and go to state 101
    Token_rBracket  shift, and go to state 104


State 91

   15 stmtList: stmtList Token_semicolon statement .

    $default  reduce using rule 15 (stmtList)


State 92

   10 type: Token_array Token_lRectBracket Token_Integer . Token_dot Token_dot Token_Integer Token_rRectBracket Token_of simpleType

    Token_dot  shift, and go to state 105


State 93

   30 forStmt: Token_for Token_identifier Token_assign expr . toPart expr Token_do statement

    Token_downTo  shift, and go to state 106
    Token_to      shift, and go to state 107

    toPart  go to state 108


State 94

   25 index: Token_lRectBracket expr Token_rRectBracket .

    $default  reduce using rule 25 (index)


State 95

   24 assignStmt: Token_identifier index Token_assign expr .

    $default  reduce using rule 24 (assignStmt)


State 96

   49 factor: Token_lBracket expr Token_rBracket .

    $default  reduce using rule 49 (factor)


State 97

   26 ifStmt: Token_if expr Token_then statement . elsePart

    Token_else  shift, and go to state 109

    Token_else  [reduce using rule 28 (elsePart)]
    $default    reduce using rule 28 (elsePart)

    elsePart  go to state 110


State 98

   35 expr: simpleExpr relOp simpleExpr .
   37 simpleExpr: simpleExpr . addOp term

    Token_add  shift, and go to state 70
    Token_or   shift, and go to state 77
    Token_sub  shift, and go to state 78

    $default  reduce using rule 35 (expr)

    addOp  go to state 80


State 99

   37 simpleExpr: simpleExpr addOp term .
   39 term: term . mulOp factor

    Token_and     shift, and go to state 81
    Token_div     shift, and go to state 82
    Token_divide  shift, and go to state 83
    Token_mod     shift, and go to state 84
    Token_mult    shift, and go to state 85

    $default  reduce using rule 37 (simpleExpr)

    mulOp  go to state 86


State 100

   39 term: term mulOp factor .

    $default  reduce using rule 39 (term)


State 101

   33 exprList: exprList Token_comma . expr

    Token_false       shift, and go to state 43
    Token_identifier  shift, and go to state 44
    Token_Integer     shift, and go to state 45
    Token_lBracket    shift, and go to state 46
    Token_not         shift, and go to state 47
    Token_Real        shift, and go to state 48
    Token_String      shift, and go to state 49
    Token_sub         shift, and go to state 50
    Token_true        shift, and go to state 51

    expr        go to state 111
    simpleExpr  go to state 53
    term        go to state 54
    factor      go to state 55


State 102

   22 statement: Token_read Token_lBracket exprList Token_rBracket .

    $default  reduce using rule 22 (statement)


State 103

   29 whileStmt: Token_while expr Token_do statement .

    $default  reduce using rule 29 (whileStmt)


State 104

   23 statement: Token_write Token_lBracket exprList Token_rBracket .

    $default  reduce using rule 23 (statement)


State 105

   10 type: Token_array Token_lRectBracket Token_Integer Token_dot . Token_dot Token_Integer Token_rRectBracket Token_of simpleType

    Token_dot  shift, and go to state 112


State 106

   32 toPart: Token_downTo .

    $default  reduce using rule 32 (toPart)


State 107

   31 toPart: Token_to .

    $default  reduce using rule 31 (toPart)


State 108

   30 forStmt: Token_for Token_identifier Token_assign expr toPart . expr Token_do statement

    Token_false       shift, and go to state 43
    Token_identifier  shift, and go to state 44
    Token_Integer     shift, and go to state 45
    Token_lBracket    shift, and go to state 46
    Token_not         shift, and go to state 47
    Token_Real        shift, and go to state 48
    Token_String      shift, and go to state 49
    Token_sub         shift, and go to state 50
    Token_true        shift, and go to state 51

    expr        go to state 113
    simpleExpr  go to state 53
    term        go to state 54
    factor      go to state 55


State 109

   27 elsePart: Token_else . statement

    Token_begin       shift, and go to state 12
    Token_for         shift, and go to state 18
    Token_identifier  shift, and go to state 19
    Token_if          shift, and go to state 20
    Token_read        shift, and go to state 21
    Token_while       shift, and go to state 22
    Token_write       shift, and go to state 23

    compStmt    go to state 24
    statement   go to state 114
    assignStmt  go to state 27
    ifStmt      go to state 28
    whileStmt   go to state 29
    forStmt     go to state 30


State 110

   26 ifStmt: Token_if expr Token_then statement elsePart .

    $default  reduce using rule 26 (ifStmt)


State 111

   33 exprList: exprList Token_comma expr .

    $default  reduce using rule 33 (exprList)


State 112

   10 type: Token_array Token_lRectBracket Token_Integer Token_dot Token_dot . Token_Integer Token_rRectBracket Token_of simpleType

    Token_Integer  shift, and go to state 115


State 113

   30 forStmt: Token_for Token_identifier Token_assign expr toPart expr . Token_do statement

    Token_do  shift, and go to state 116


State 114

   27 elsePart: Token_else statement .

    $default  reduce using rule 27 (elsePart)


State 115

   10 type: Token_array Token_lRectBracket Token_Integer Token_dot Token_dot Token_Integer . Token_rRectBracket Token_of simpleType

    Token_rRectBracket  shift, and go to state 117


State 116

   30 forStmt: Token_for Token_identifier Token_assign expr toPart expr Token_do . statement

    Token_begin       shift, and go to state 12
    Token_for         shift, and go to state 18
    Token_identifier  shift, and go to state 19
    Token_if          shift, and go to state 20
    Token_read        shift, and go to state 21
    Token_while       shift, and go to state 22
    Token_write       shift, and go to state 23

    compStmt    go to state 24
    statement   go to state 118
    assignStmt  go to state 27
    ifStmt      go to state 28
    whileStmt   go to state 29
    forStmt     go to state 30


State 117

   10 type: Token_array Token_lRectBracket Token_Integer Token_dot Token_dot Token_Integer Token_rRectBracket . Token_of simpleType

    Token_of  shift, and go to state 119


State 118

   30 forStmt: Token_for Token_identifier Token_assign expr toPart expr Token_do statement .

    $default  reduce using rule 30 (forStmt)


State 119

   10 type: Token_array Token_lRectBracket Token_Integer Token_dot Token_dot Token_Integer Token_rRectBracket Token_of . simpleType

    Token_integer  shift, and go to state 34
    Token_real     shift, and go to state 35
    Token_string   shift, and go to state 36

    simpleType  go to state 120


State 120

   10 type: Token_array Token_lRectBracket Token_Integer Token_dot Token_dot Token_Integer Token_rRectBracket Token_of simpleType .

    $default  reduce using rule 10 (type)
